--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@basestack/flags-js",
-  "version": "1.1.1",
+  "version": "1.0.5",
   "description": "Feature Flags SDK for JavaScript",
   "repository": "https://github.com/basestack-co/basestack-flags-js",
+  "private": false,
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -26,8 +27,8 @@
     "check": "bunx biome check --write .",
     "test": "bunx vitest run",
     "test:watch": "bunx vitest watch",
-    "prepublishOnly": "bun run lint && bun run test",
-    "publish": "bun run lint && bun run test && npm publish"
+    "prepublishOnly": "bun run lint && bun run test && bun run build",
+    "publish": "npm publish --access public"
   },
   "keywords": [
     "feature-flags",
@@ -37,8 +38,11 @@
     "basestack"
   ],
   "author": "Basestack",
-  "license": "AGPL-3.0",
+  "license": "MIT",
   "packageManager": "bun@1.3.2",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@biomejs/biome": "^2.3.5",
     "tsdown": "^0.16.4",
