--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@basestack/flags-js",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Feature Flags SDK for JavaScript",
   "repository": "https://github.com/basestack-co/basestack-flags-js",
   "private": false,
@@ -27,8 +27,7 @@
     "check": "bunx biome check --write .",
     "test": "bunx vitest run",
     "test:watch": "bunx vitest watch",
-    "prepublishOnly": "bun run lint && bun run test && bun run build",
-    "publish": "npm publish --access public"
+    "prepublishOnly": "bun run lint && bun run test && bun run build"
   },
   "keywords": [
     "feature-flags",
@@ -40,6 +39,9 @@
   "author": "Basestack",
   "license": "MIT",
   "packageManager": "bun@1.3.2",
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "publishConfig": {
     "access": "public"
   },
