Update dependencies and configuration files: bump @biomejs/biome and tsdown versions to 2.3.6 and 0.16.5 respectively, upgrade vitest to 4.0.10, and update Vite version in examples to 7.2.2. Refactor bun.lock files for client and server examples, and enhance package.json scripts with update command.

--- a/examples/client/package.json
+++ b/examples/client/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "bunx vite",
     "build": "bunx vite build",
-    "preview": "bunx vite preview"
+    "preview": "bunx vite preview",
+    "update:deps": "bun update -i"
   },
   "dependencies": {
-    "vite": "^5.4.10"
+    "vite": "^7.2.2"
   },
   "devDependencies": {
     "typescript": "^5.8.3"
