--- a/examples/vue/package.json
+++ b/examples/vue/package.json
@@ -5,15 +5,16 @@
   "scripts": {
     "dev": "bunx vite",
     "build": "bunx vite build",
-    "preview": "bunx vite preview"
+    "preview": "bunx vite preview",
+    "update:deps": "bun update -i"
   },
   "dependencies": {
     "@basestack/flags-js": "link:../..",
-    "vue": "^3.5.11"
+    "vue": "^3.5.25"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue": "^6.0.2",
     "typescript": "^5.8.3",
-    "vite": "^5.4.10"
+    "vite": "^7.2.6"
   }
 }
